--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #141516;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -40,7 +40,7 @@ a:hover {
 
 .color-a {
   text-decoration: none;
-  color: #0078ff;
+  color: #141516;
 }
 
 .color-d {
@@ -67,7 +67,7 @@ a:hover {
 }
 
 .display-5 {
-  font-size: 2.5rem;
+  font-size: 2.5rem;  
   font-weight: 300;
   line-height: 1.1;
 }
@@ -99,7 +99,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #111213;
 }
 
 .overlay-mf {
@@ -168,7 +168,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #4e5052;
   margin: 0 auto;
 }
 
@@ -186,7 +186,7 @@ a:hover {
   content: "";
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #0f1011;
   width: 100px;
   bottom: -12px;
 }
@@ -227,12 +227,12 @@ a:hover {
   border-radius: 50%;
   line-height: 1.6;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #373838;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #040505;
   color: #fff;
   box-shadow: 0 0 0 3px #cde1f8;
   transition: all 500ms ease;
@@ -256,7 +256,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #535455;
   margin-right: 10px;
 }
 
@@ -269,7 +269,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #121213;
   display: block;
 }
 
@@ -314,7 +314,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #343435;
   opacity: 0.7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -338,7 +338,7 @@ a:hover {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0078ff;
+  background: #2f2f30;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -352,7 +352,7 @@ a:hover {
 }
 
 .back-to-top:hover {
-  background: #298eff;
+  background: #18222e;
   color: #fff;
 }
 
@@ -379,7 +379,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #161616;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -428,14 +428,14 @@ a:hover {
 }
 
 .button:hover {
-  background-color: #0062d3;
+  background-color: #1b1c1d;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .button-a {
   text-decoration: none;
-  background-color: #0078ff;
+  background-color: #232425;
   color: #fff;
   border-color: #cde1f8;
 }
@@ -596,7 +596,7 @@ a:hover {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #0078ff;
+  color: #3c3c3d;
 }
 
 .navbar .dropdown:hover>ul {
@@ -701,7 +701,7 @@ a:hover {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #0078ff;
+  color: #232324;
 }
 
 .navbar-mobile .getstarted,
@@ -736,7 +736,7 @@ a:hover {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #0078ff;
+  color: #2d2d2e;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -816,7 +816,7 @@ a:hover {
 
 .hero-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #2f2f30;
 }
 
 .hero-single .breadcrumb .breadcrumb-item:before {
@@ -835,12 +835,12 @@ a:hover {
 # About
 --------------------------------------------------------------*/
 .about-mf .box-shadow-full {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .about-mf .about-img {
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 
 .about-mf .about-img img {
@@ -867,7 +867,7 @@ a:hover {
 
 .skill-mf .progress .progress-bar {
   height: 0.7rem;
-  background-color: #0078ff;
+  background-color: #282829;
 }
 
 /*--------------------------------------------------------------
@@ -884,7 +884,7 @@ a:hover {
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #0078ff;
+  background-color: #1d1e1f;
   box-shadow: 0 0 0 10px #cde1f8;
 }
 
@@ -979,17 +979,17 @@ a:hover {
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #444546;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #505255;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+  color: #363738;
 }
 
 .work-content .w-like .num-like {
@@ -1021,11 +1021,11 @@ a:hover {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0078ff;
+  border: 1px solid #5b5d5f;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0078ff;
+  background-color: #2c2d2e;
 }
 
 .portfolio-details .portfolio-info {
@@ -1092,7 +1092,7 @@ a:hover {
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #141516;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -1201,7 +1201,7 @@ a:hover {
 
 .php-email-form input:focus,
 .php-email-form textarea:focus {
-  border-color: #0078ff;
+  border-color: #141516;
 }
 
 .php-email-form input {
@@ -1214,7 +1214,7 @@ a:hover {
 }
 
 .php-email-form button[type=submit] {
-  background: #0078ff;
+  background: #212122;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1222,7 +1222,7 @@ a:hover {
 }
 
 .php-email-form button[type=submit]:hover {
-  background: #3393ff;
+  background: #39393a;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1273,7 +1273,7 @@ a:hover {
   color: #fff;
   padding: 0 15px 5px;
   overflow: hidden;
-  background-color: #0078ff;
+  background-color: #141516;
   border-radius: 4px;
 }
 
@@ -1342,7 +1342,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #141516;
   margin-top: 1rem;
 }
 
@@ -1352,7 +1352,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul a {
-  color: #0078ff;
+  color: #141516;
 }
 
 .blog-wrapper .post-meta ul span {
@@ -1360,7 +1360,7 @@ a:hover {
 }
 
 .blog-wrapper .blockquote {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #141516;
   padding: 18px;
   font-style: italic;
 }
@@ -1397,7 +1397,7 @@ a:hover {
 }
 
 .box-comments .list-comments a {
-  color: #0078ff;
+  color: #141516;
 }
 
 .box-comments .list-comments span {
@@ -1413,7 +1413,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
-  border-left: 5px solid #0078ff;
+  border-left: 5px solid #141516;
   padding-left: 15px;
   text-transform: uppercase;
   margin-bottom: 1.5rem;
@@ -1430,7 +1430,7 @@ a:hover {
   width: 10px;
   height: 1px;
   left: 0;
-  background-color: #0078ff;
+  background-color: #141516;
   top: 20px;
 }
 
@@ -1441,8 +1441,8 @@ a:hover {
 }
 
 .sidebar-search .btn-search {
-  background-color: #0078ff;
-  border-color: #0078ff;
+  background-color: #141516;
+  border-color: #141516;
   border-radius: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -1450,7 +1450,7 @@ a:hover {
 
 .widget-tags ul li {
   display: inline-block;
-  background-color: #0078ff;
+  background-color: #141516;
   padding: 0.2rem 0.6rem;
   margin-bottom: 0.5rem;
   border-radius: 15px;
@@ -1467,7 +1467,7 @@ footer {
   text-align: center;
   color: #fff;
   padding: 25px 0;
-  background: #0062d3;
+  background: #232324;
 }
 
 footer .copyright {
